[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Score.gd" type="Script" id=2]
[ext_resource path="res://art/music/success-fanfare-trumpets-6185.mp3" type="AudioStream" id=3]
[ext_resource path="res://Styles.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=2]
size = 58
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[node name="Score" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 9.0
margin_top = 40.0
margin_right = 1073.0
margin_bottom = 540.0
rect_min_size = Vector2( 1064, 500 )

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_right = 1064.0
margin_bottom = 500.0
rect_min_size = Vector2( 1064, 500 )
color = Color( 0.294118, 0.447059, 0.662745, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 239.0
margin_top = 104.0
margin_right = 825.0
margin_bottom = 395.0
custom_constants/separation = 30

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 586.0
margin_bottom = 71.0

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/TitleContainer"]
margin_right = 586.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
text = "Congratulations!!"
align = 1
valign = 1

[node name="SeqContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 586.0
margin_bottom = 291.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SeqContainer"]
margin_right = 586.0
margin_bottom = 190.0
custom_constants/separation = 200
alignment = 1

[node name="EditedContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer"]
margin_right = 195.0
margin_bottom = 190.0

[node name="HeaderLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/EditedContainer"]
margin_right = 195.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Edited"
align = 1

[node name="FEditedLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/EditedContainer"]
margin_top = 34.0
margin_right = 195.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 5 )

[node name="SEditedLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/EditedContainer"]
margin_top = 97.0
margin_right = 195.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/EditedContainer"]
margin_top = 160.0
margin_right = 195.0
margin_bottom = 190.0
custom_constants/separation = 15
alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/EditedContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Your align score is"
align = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/EditedContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 195.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
align = 1

[node name="OriginalContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer"]
margin_left = 395.0
margin_right = 586.0
margin_bottom = 190.0

[node name="HeaderLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/OriginalContainer"]
margin_right = 191.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Best Socre"
align = 1

[node name="FOriginLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/OriginalContainer"]
margin_top = 34.0
margin_right = 191.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 6 )

[node name="SOriginLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/OriginalContainer"]
margin_top = 75.0
margin_right = 191.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/OriginalContainer"]
margin_top = 138.0
margin_right = 191.0
margin_bottom = 168.0
custom_constants/separation = 15
alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/OriginalContainer/HBoxContainer"]
margin_right = 176.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Best align score is"
align = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/SeqContainer/HBoxContainer/OriginalContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 191.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Styles" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
